sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: ')' expected but ';' found.
				lastCase = i-(j-2);
                                                  ^AlgInsertionSort:13: error: ')' expected but '}' found.
		}
                ^